--- a/esercizi/if_e_while.ipynb
+++ b/esercizi/if_e_while.ipynb
@@ -11,47 +11,111 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "0U7L9A29RfeT"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dispari\n"
+          ]
+        }
+      ],
       "source": [
         "# Es 4.1: Ottenere dall'utente un numero in input e scrivere a schermo \"Pari\" se il numero è pari, scrivere \"Dispari\" altrimenti\n",
-        "x = int(input())   "
+        "x = int(input())   \n",
+        "if (x%2 == 0):\n",
+        "    print(\"Pari\")\n",
+        "else:\n",
+        "    print(\"Dispari\") \n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "gE3RVr9ORuwP"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "il triangolo si\n"
+          ]
+        }
+      ],
       "source": [
-        "# Es 4.2: Ottenere dall'utente tre angoli caso siano i tre angoli di un triangolo scrivere a schermo \"È un triangolo\", altrimenti \"Non è un triangolo\"\n"
+        "# Es 4.2: Ottenere dall'utente tre angoli caso siano i tre angoli di un triangolo scrivere a schermo \"È un triangolo\", altrimenti \"Non è un triangolo\n",
+        "x = float(input())\n",
+        "y = float(input())\n",
+        "z = float(input())\n",
+        "\n",
+        "if((x+y+z) == 180 and x>0 and y>0 and z>0):\n",
+        "    print(\"il triangolo si\")\n",
+        "else:\n",
+        "    print(\"il triangolo no\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "r1A_DavcSKgi"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "il triangolo è rettangolo\n"
+          ]
+        }
+      ],
       "source": [
-        "# Es 4.3: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo rettangolo o no\n"
+        "# Es 4.3: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo rettangolo o no\n",
+        "x = float(input())\n",
+        "y = float(input())\n",
+        "z = float(input())\n",
+        "\n",
+        "if((x+y+z) == 180 and x>0 and y>0 and z>0):\n",
+        "    if(x == 90 or y == 90 or z == 90):\n",
+        "        print(\"il triangolo è rettangolo\")\n",
+        "    else:\n",
+        "        print(\"il triangolo esiste ma non è rettangolo\")\n",
+        "else:\n",
+        "    print(\"il triangolo non esiste\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "iA9D4X_GSims"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "il triangolo esiste\n"
+          ]
+        }
+      ],
       "source": [
-        "# Es 4.4: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo equilatero o no\n"
+        "# Es 4.4: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo equilatero o no\n",
+        "x = float(input())\n",
+        "y = float(input())\n",
+        "z = float(input())\n",
+        "if((x+y+z) == 180 and x>0 and y>0 and z>0):\n",
+        "    print(\"il triangolo esiste\")\n",
+        "    if(x == 60 and y == 60 and z == 60):\n",
+        "        print(\"il triangolo è equilatero\")\n",
+        "else:\n",
+        "    print(\"il triangolo no\")"
       ]
     },
     {
@@ -93,7 +157,9 @@
       },
       "outputs": [],
       "source": [
-        "# Es 4.7: Creare una funzione print_n(n,v) che stampi n volte il. contenuto di v\n"
+        "# Es 4.7: Creare una funzione print_n(n,v) che stampi n volte il. contenuto di v\n",
+        "def print_n(n, v):\n",
+        "    for(i =0, i<n, i++)         "
       ]
     },
     {
@@ -154,7 +220,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.8"
     }
   },
   "nbformat": 4,
