modifiche fine if

--- a/esercizi/if_e_while.ipynb
+++ b/esercizi/if_e_while.ipynb
@@ -120,24 +120,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "8q4gadoTSU7J"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "il triangolo esiste\n",
+            "il triangolo è isoscele\n"
+          ]
+        }
+      ],
       "source": [
-        "# Es 4.5: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo isocele o no\n"
+        "# Es 4.5: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo isocele o no\n",
+        "x = float(input())\n",
+        "y = float(input())\n",
+        "z = float(input())\n",
+        "if((x+y+z) == 180 and x>0 and y>0 and z>0):\n",
+        "    print(\"il triangolo esiste\")\n",
+        "    if(x == y or y == z  or z == x):\n",
+        "        print(\"il triangolo è isoscele\")\n",
+        "else:\n",
+        "    print(\"il triangolo no\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "yVIE2kK3SYlq"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "il triangolo esiste\n",
+            "il triangolo è isoscele\n",
+            "il triangolo è equilatero\n"
+          ]
+        }
+      ],
       "source": [
-        "# Es 4.6: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo isocele, rettagolo, equilatero o scaleno\n"
+        "# Es 4.6: Ottenuti dall'utente tre angoli di un tringolo scrivere a schermo se i tre angoli descrivono un triangolo isocele, rettagolo, equilatero o scaleno\n",
+        "x = float(input())\n",
+        "y = float(input())\n",
+        "z = float(input())\n",
+        "if((x+y+z) == 180 and x>0 and y>0 and z>0):\n",
+        "    print(\"il triangolo esiste\")\n",
+        "    if(x == y or y == z  or z == x):\n",
+        "        print(\"il triangolo è isoscele\")\n",
+        "        if(x == y and y == z):\n",
+        "            print(\"il triangolo è equilatero\")\n",
+        "    else:\n",
+        "        print(\"il triangolo è scaleno\")\n",
+        "    if(x == 90 or y == 90 or z == 90):\n",
+        "            print(\"il triangolo è rettangolo\")\n",
+        "else:\n",
+        "    print(\"il triangolo non esiste\")"
       ]
     },
     {
