--- a/esercizi/if_e_while.ipynb
+++ b/esercizi/if_e_while.ipynb
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "id": "yVIE2kK3SYlq"
       },
@@ -194,20 +194,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "j61RqiHxqdmh"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "2\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "# Es 4.7: Creare una funzione print_n(n,v) che stampi n volte il. contenuto di v\n",
         "def print_n(n, v):\n",
-        "    for(i =0, i<n, i++)         "
+        "    while 0 < n:\n",
+        "        print(v)\n",
+        "        n = n-1\n",
+        "\n",
+        "# la funzione è quella sopra queste righe di codice chiamano la funzione e fanno vedere un utilizzo della funzione print_n\n",
+        "n = int(input())\n",
+        "v = input()\n",
+        "print_n(n,v)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,16 +232,32 @@
         "id": "-6lAm-hfq9w9",
         "outputId": "399e82ba-3cfe-475f-f8df-0e156677ec75"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 è un divisore di 2\n"
+          ]
+        }
+      ],
       "source": [
         "# Es 4.8: Inserito il numero n dire per quali numeri, compresi tra 1 e n, è divisibile.\n",
         "# Inserisco 10: stampo 1,2,5\n",
-        "# Inserisco 7: stampo 1\n"
+        "# Inserisco 7: stampo 1\n",
+        "n = int(input())\n",
+        "# funzione valore assoluto così non faccio il controllo che n sia naturale\n",
+        "n = abs(n)\n",
+        "div = 1\n",
+        "while div != n:\n",
+        "    if(n % div == 0):\n",
+        "        print(div, \"è un divisore di\", n)\n",
+        "    div = div + 1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -232,14 +265,36 @@
         "id": "GjC4LdR7rP-b",
         "outputId": "9f539b4d-c307-479a-da13-610a7e1cc46e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "il numero 17 è primo\n"
+          ]
+        }
+      ],
       "source": [
-        "# Es 4.9: Inserito il numero n dire se è primo o no\n"
+        "# Es 4.9: Inserito il numero n dire se è primo o no\n",
+        "n = int(input())\n",
+        "# funzione valore assoluto così non faccio il controllo che n sia naturale\n",
+        "n = abs(n)\n",
+        "div = n-1\n",
+        "if(n == 1):\n",
+        "    print(n, \"per convenzione non è primo\")\n",
+        "else:\n",
+        "    while n % div != 0:\n",
+        "        div = div - 1\n",
+        "    if (div == 1):\n",
+        "        print(\"il numero\", n, \"è primo\")\n",
+        "    else:\n",
+        "        print(\"il numero\", n, \"non è primo\")\n",
+        "        "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -247,10 +302,39 @@
         "id": "CxtWnOdHsTv4",
         "outputId": "5d874410-cb07-46a2-9c22-83d541b7a91a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "la somma è: \n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Es 4.10: Creare la funzione moltiplica che restituisce il prodotto tra due numeri senza utilizzare *\n",
-        "# 3*4 è uguale a 4+4+4\n"
+        "# 3*4 è uguale a 4+4+4\n",
+        "def moltiplica (n, m):\n",
+        "    somma = 0\n",
+        "    while 0 < n:\n",
+        "        somma = somma + m\n",
+        "        n = n-1\n",
+        "    print(\"la somma è: \")\n",
+        "    return somma\n",
+        "\n",
+        "n = abs(int(input()))\n",
+        "m = int(input())\n",
+        "moltiplica(n,m)"
       ]
     }
   ],
