--- a/esercizi/geometria_5ASA_pettenuzzo_federico.ipynb
+++ b/esercizi/geometria_5ASA_pettenuzzo_federico.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,7 +28,16 @@
         "id": "PHdyo8E42sza",
         "outputId": "fb51a75d-54ef-48c3-f6ad-342834d2738b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Parola 1 Parola 2.\n",
+            "Parola 3\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Parola 1\", end=\" \")\n",
         "print(\"Parola 2\", end=\".\\n\")\n",
